# research-study

./: .gitignore  PHASE4_JUDGE_PROTOCOL.md  PHASE5_JUDGE_PROTOCOL_B.md  PILOT_LOG.md  README.md  TASKB_PREREG.md  hacking_report_b_output.txt  pyproject.toml  requirements.txt  study_config.py
data_generation/: __init__.py  generate.py  generate_b.py
evaluation/: hacking_report.py  hacking_report_b.py  judge_taskA.py  judge_taskB.py  pilot_taskB.py  run_baseline.py
graders/: __init__.py  grader.py  grader_b.py
judge_results/: _worst_gap_loose_easy_hard.txt
judge_results/baseline-untrained-seed-1/: results.json  transcripts_greedy.jsonl  transcripts_passk.jsonl
judge_results/loose-easy-seed0/: results.json  transcripts_greedy.jsonl  transcripts_passk.jsonl
judge_results/loose-easy-seed1/: results.json  transcripts_greedy.jsonl  transcripts_passk.jsonl
judge_results/loose-easy-seed2/: results.json  transcripts_greedy.jsonl  transcripts_passk.jsonl
judge_results/loose-easy_hard-seed0/: results.json  transcripts_greedy.jsonl  transcripts_passk.jsonl
judge_results/loose-easy_hard-seed1/: results.json  transcripts_greedy.jsonl  transcripts_passk.jsonl
judge_results/loose-easy_hard-seed2/: results.json  transcripts_greedy.jsonl  transcripts_passk.jsonl
judge_results/strict-easy-seed0/: results.json  (+2 more)
tests/: test_data_generation.py  test_generate_b.py  test_grader_b.py  test_graders.py  test_judge.py  test_judge_b.py  test_real.py  test_tasks.py  test_train.py
training/: __init__.py  run_real.py  smoke_test.py  tasks.py  train_grpo.py
(+54 files in other folders)
